Make platemap for nov12 platemap

--- a/96Well_PlateMap.ipynb
+++ b/96Well_PlateMap.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "id": "954ba80c-8b97-4197-bf9f-8f270eaef611",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "id": "4fb110b6-1789-494e-86a5-5f46ed7d7b0f",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "id": "55db1be5-2319-48d2-b8f9-b3a923aa1429",
    "metadata": {},
    "outputs": [
@@ -51,10 +51,10 @@
     }
    ],
    "source": [
-    "#Get 96-well plate CSV file from benchiling   NOTE: don't initialze an empty df, use a list and convert after.\n",
+    "#Get 96-well plate CSV file from benchiling/Notion NOTE: don't initialze an empty df, use a list and convert after.\n",
     "\n",
-    "plate_path = '/Users/allielas/ML_Sandbox/nov12plate.csv' #'/home/mattiazzilab/Documents/Allie_Scripts/May 8 seeding.csv'\n",
-    "export_path = '/Users/allielas/ML_Sandbox/'#'/mnt/bigdisk1/Allie_S/Replicative_Age_Project/Data Mining/metadata/'\n",
+    "plate_path = 'nov12_metadata/nov12plate.csv' #'/home/mattiazzilab/Documents/Allie_Scripts/May 8 seeding.csv'\n",
+    "export_path = 'nov12_metadata/'#'/mnt/bigdisk1/Allie_S/Replicative_Age_Project/Data Mining/metadata/'\n",
     "\n",
     "\n",
     "raw_plate_df = pd.read_csv(plate_path, header=0, usecols=range(1,13)).dropna(axis=1,how='all')\n",
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "id": "7614aa4c-8c12-4459-b6da-05c22f6cfa35",
    "metadata": {},
    "outputs": [],
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "id": "c9ed2d20-17ac-4892-b4fd-a6a3540d3980",
    "metadata": {},
    "outputs": [
